--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -7,11 +7,12 @@
   display: flex;
   justify-content: center;
   align-content: center;
-  height: 100%;
+  //height: 100%;
   ul{
     text-decoration: none;
     li{
-      height: 100%;
+      display:block;
+      //height: 100%;
     }
   }
 }
@@ -21,4 +22,11 @@
   padding: 2rem;
   display: table-cell;
   vertical-align: middle;
+}
+.footer-note{
+  display: flex;
+  justify-content: center;
+  div{
+    color: white;
+  }
 }
