--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -46,9 +46,9 @@
   width: 100%;
   font-size: 3rem;
   font-family: "Poppins", sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
 }
 
 .skill {
@@ -64,7 +64,7 @@
   }
   .skills .section {
     grid-template-columns: repeat(5, 1fr);
-    width: 100vw;
+    width: 100%;
     height: 15vh;
     gap: 0;
   }
