--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -53,9 +53,11 @@
     //margin: 20px;
     font-size: 3rem;
     font-family: 'Poppins', sans-serif;;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: table-cell;
+    //align-items: center;
+    //justify-content: center;
+    vertical-align: middle;
+    text-align: center;
 }
 .skill{
     height: 10rem;
@@ -73,7 +75,7 @@
 
         .section{
             grid-template-columns: repeat(5,1fr);
-            width: 100vw;
+            width: 100%;
             height: 15vh;
             gap: 0;
             .skill{
