--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -1,25 +1,57 @@
 .card{
   display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  justify-content: flex-start;
   height: 100%;
   width: 90%;
   border:2px black solid;
   border-radius: 10px;
   margin: 0 4%;
+
+  div{
+    font-size: larger;
+    a{
+      text-decoration: none;
+    }
+  }
+  div.project{
+    height: 10%;
+    font-size: larger;
+  }
+  div.description{
+    font-size: small;
+    height: 50%;
+    margin:2.5% 0;
+  }
+  div.tech{
+    height: 25%;
+    font-size: small;
+    //display: table-cell;
+    //vertical-align: bottom;
+  }
+
+}
+.link{
+  position: absolute;
+  display: block;
+  //z-index: -1;
+  a{
+    text-decoration: none;
+    i{
+      font-size: 10rem;
+      color: yellow;
+    }
+  }
 }
 .card:hover{
-  background-color: black;
-  span{
-    color: white;
-  }
-  a{
-  i{
-    color: white;
-  }
-  }
+  scale: 1.05;
+  animation-duration: 1s;
+  border: 1px solid black;
 }
+
+
 .project{
   color: black;
 }
-.tech{
 
-}
