replaced svg with image

--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -35,7 +35,7 @@
 .skills .section i {
   font-size: 10rem;
 }
-.skills .section object {
+.skills .section img {
   height: 8rem;
   margin: 1rem 0;
   width: auto;
