--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -40,7 +40,7 @@
         i{
             font-size: 10rem;
         }
-        object{
+        img{
             height: 8rem;
             margin: 1rem 0;
             width: auto;
