--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -6,10 +6,12 @@
 }
 
 .skills {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   place-items: center;
   gap: 3rem;
+  height: calc(100vh - 10rem);
 }
 .skills .section {
   display: grid;
@@ -33,12 +35,16 @@
   text-align: center;
 }
 .skills .section i {
-  font-size: 10rem;
+  font-size: 8rem;
 }
 .skills .section img {
-  height: 8rem;
+  height: 7rem;
   margin: 1rem 0;
   width: auto;
+}
+.skills .title {
+  position: absolute;
+  bottom: 0;
 }
 
 .heading {
@@ -46,8 +52,6 @@
   width: 100%;
   font-size: 3rem;
   font-family: "Poppins", sans-serif;
-  display: table-cell;
-  vertical-align: middle;
   text-align: center;
 }
 
@@ -55,6 +59,7 @@
   height: 10rem;
   width: 10rem;
   margin: 0.5rem 1.5rem;
+  text-align: center;
 }
 
 @media (max-width: 1600px) {
@@ -75,8 +80,11 @@
   .skills .section .skill i {
     font-size: 5rem;
   }
-  .skills .section .skill object {
+  .skills .section .skill img {
     height: 4rem;
+  }
+  .skills .section .skill span {
+    display: block;
   }
 }
 @media (max-width: 600px) {
@@ -97,7 +105,7 @@
   .skills .section .skill i {
     font-size: 5rem;
   }
-  .skills .section .skill object {
+  .skills .section .skill img {
     height: 4rem;
   }
 }
