--- a/src/components/contact me/contact.scss
+++ b/src/components/contact me/contact.scss
@@ -37,7 +37,7 @@ div.message{
       padding: 2px 9px 2px 5px;
       color: #b9b9b9;
       font-size: 14px;
-      overflow: hidden;
+      //overflow: hidden;
     }
     span{
       background: #f3f3f3;
