--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,12 +1,14 @@
 .projects {
   display: flex;
-  height: 50%;
+  justify-content: center;
+  flex-wrap: wrap;
+  height: calc(100vh - 50px);
 }
 
-.card-sec {
-  width: 40%;
-  height: 40%;
-  margin-top: 1%;
+.card-cnt {
+  width: calc(50vw - 4rem);
+  height: calc(50vh - 10rem);
+  margin-top: 2rem;
 }
 
 /*# sourceMappingURL=projects.css.map */
