--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -1,12 +1,11 @@
 .projects{
   display: flex;
-  //justify-content: flex-end;
-  //flex-wrap: wrap;
-  height: 50%
+  justify-content: center;
+  flex-wrap: wrap;
+  height: calc(100vh - 50px );
 }
-.card-sec{
-  width: 40%;
-  height: 40%;
-  //margin:1rem;
-  margin-top: 1%;
+.card-cnt{
+  width: calc((100vw / 2) - 4rem );
+  height: calc((100vh / 2) - 10rem );
+  margin-top: 2rem;
 }
